# DjangoSample

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.live  README.md  entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: stage_deploy_workflow.yml
src/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/core/: settings.py
